# octoconda

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  config.toml  pixi.toml
.claude/: settings.local.json
.github/workflows/: octoconda.yaml
scripts/: add_repo.py  build.sh  build_one.sh  list_packages.py  package_and_upload_all.sh  rebalance_repos.py
src/: cli.rs  conda.rs  config_file.rs  github.rs  main.rs  package_generation.rs  state.rs
