[package]
name = "octoconda"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
clap = { version = "4.5.51", features = ["derive"] }
octocrab = { version = "0.49.5", features = ["stream"] }
rattler = "0.39.15"
rattler_conda_types = "0.43.5"
rattler_networking = "0.26.2"
rattler_repodata_gateway = { version = "0.26.2", features = ["gateway"] }
serde = "1.0.228"
toml = { version = "1.0", features = ["serde", "parse"] }
tokio = { version = "1.48.0", features = ["rt-multi-thread", "tracing", "io-std"] }
tokio-stream = "0.1.17"
url = { version = "2.5.7", features = ["serde"] }
tempfile = "3.23.0"
regex = "1.12.2"
rand = "0.10.0"
glob = "0.3.3"
futures = "0.3.32"
